syntax="proto3";

option go_package="github.com/essayZW/hpcmanager/hpc/proto;hpc";

import "proto/ping.proto";
import "proto/common.proto";
import "gateway/proto/baserequest.proto";

service Hpc {
    rpc Ping(publicproto.Empty) returns (publicproto.PingResponse) {}
    rpc AddUserWithGroup(AddUserWithGroupRequest) returns (AddUserWithGroupResponse) {}
}

message AddUserWithGroupRequest {
    request.BaseRequest baseRequest = 1;
    string tutorUsername = 2;
    string groupName = 3;
    string queueName = 4;
}

message AddUserWithGroupResponse {
    string groupName = 1;
    int32 gid = 2;
    string userName = 3;
    int32 uid = 4;
    int32 hpcGroupID = 5;
    int32 hpcUserID = 6;
}
